deployment-caro.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: caro-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: caro
    spec:
      containers:
      - name: caro
        image: nginxdemos/hello
        ports:
        - containerPort: 80
