deployment-martin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: martin-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: martin
    spec:
      containers:
      - name: martin
        image: nginxdemos/hello
        ports:
        - containerPort: 80
