service-caro.yaml
apiVersion: v1
kind: Service
metadata:
  name: caro-svc
  labels:
    app: caro
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: caro
