service-martin.yaml
apiVersion: v1
kind: Service
metadata:
  name: martin-svc
  labels:
    app: martin
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: martin
